Được tạo bằng Colab

--- a/3_Final_Model_with_BackTranslation.ipynb
+++ b/3_Final_Model_with_BackTranslation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNxwXbJ09LPUIJt/Uv9rXix",
+      "authorship_tag": "ABX9TyNHRQnDQCm8Xj9qn7ZY2KVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,22 +355,10 @@
         "print(\"💾 Đã lưu file chất lượng cao: 1-VLSP2018-Restaurant-Train-BACKTRANS.csv\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QBffK_NRrfEI",
-        "outputId": "6e75be5d-65c0-47b5-bc15-efe67d93d895"
+        "id": "QBffK_NRrfEI"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "  1%|▏         | 90/6401 [01:30<1:29:13,  1.18it/s]"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -523,6 +511,155 @@
       ],
       "metadata": {
         "id": "FjtrScWd-z3w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- BƯỚC 1: CÀI ĐẶT & KẾT NỐI ---\n",
+        "!pip install -q transformers torch scikit-learn\n",
+        "\n",
+        "import torch\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "import os\n",
+        "import time\n",
+        "import numpy as np\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from transformers import AutoTokenizer, AutoModelForSequenceClassification, get_linear_schedule_with_warmup\n",
+        "from torch.optim import AdamW\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# Kết nối Drive\n",
+        "drive.mount('/content/drive')\n",
+        "folder_path = '/content/drive/My Drive/ABSA_Project'\n",
+        "\n",
+        "try:\n",
+        "    os.chdir(folder_path)\n",
+        "    print(f\"✅ Đang làm việc tại: {os.getcwd()}\")\n",
+        "except:\n",
+        "    print(\"⚠️ Kiểm tra lại đường dẫn folder_path!\")\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "print(f\"🚀 Thiết bị: {device}\")\n",
+        "\n",
+        "# --- BƯỚC 2: CÁC HÀM CẦN THIẾT (ĐÃ SỬA LỖI CÚ PHÁP) ---\n",
+        "def parse_vlsp_data(file_name):\n",
+        "    lines = []\n",
+        "    # Thử đọc utf-16\n",
+        "    try:\n",
+        "        with open(file_name, 'r', encoding='utf-16') as f:\n",
+        "            lines = f.readlines()\n",
+        "    except:\n",
+        "        # Nếu lỗi thì đọc utf-8\n",
+        "        try:\n",
+        "            with open(file_name, 'r', encoding='utf-8') as f:\n",
+        "                lines = f.readlines()\n",
+        "        except:\n",
+        "            return pd.DataFrame()\n",
+        "\n",
+        "    dataset = []\n",
+        "    review_buffer = []\n",
+        "    label_pattern = re.compile(r\"\\{(.*?),\\s*(.*?)\\}\")\n",
+        "\n",
+        "    for line in lines:\n",
+        "        line = line.strip()\n",
+        "        if not line: continue\n",
+        "        if \"{\" in line and \"}\" in line and \"#\" in line:\n",
+        "            current_review = \" \".join(review_buffer).strip()\n",
+        "            matches = label_pattern.findall(line)\n",
+        "            for aspect, sentiment in matches:\n",
+        "                if sentiment.lower() != 'none':\n",
+        "                    dataset.append({'text': current_review, 'aspect': aspect.strip(), 'label': sentiment.strip().lower()})\n",
+        "            review_buffer = []\n",
+        "        else:\n",
+        "            review_buffer.append(re.sub(r\"^[\\_\\-]\\s*\", \"\", line))\n",
+        "    return pd.DataFrame(dataset)\n",
+        "\n",
+        "class SentimentDataset(Dataset):\n",
+        "    def __init__(self, df, tokenizer, max_len=128):\n",
+        "        self.df = df\n",
+        "        self.tokenizer = tokenizer\n",
+        "        self.max_len = max_len\n",
+        "        self.label_map = {'negative': 0, 'neutral': 1, 'positive': 2}\n",
+        "    def __len__(self): return len(self.df)\n",
+        "    def __getitem__(self, index):\n",
+        "        row = self.df.iloc[index]\n",
+        "        input_text = f\"{str(row['aspect'])} {self.tokenizer.sep_token} {str(row['text'])}\"\n",
+        "        encoding = self.tokenizer.encode_plus(\n",
+        "            input_text, add_special_tokens=True, max_length=self.max_len,\n",
+        "            padding='max_length', truncation=True, return_attention_mask=True, return_tensors='pt'\n",
+        "        )\n",
+        "        return {\n",
+        "            'input_ids': encoding['input_ids'].flatten(),\n",
+        "            'attention_mask': encoding['attention_mask'].flatten(),\n",
+        "            'labels': torch.tensor(self.label_map[row['label']], dtype=torch.long)\n",
+        "        }\n",
+        "\n",
+        "# --- BƯỚC 3: LOAD DỮ LIỆU & SETUP ---\n",
+        "print(\"\\n⏳ Đang tải dữ liệu...\")\n",
+        "# Load tập Train đã Cân bằng\n",
+        "try:\n",
+        "    # Ưu tiên dùng file Back-Translation nếu có\n",
+        "    if os.path.exists('1-VLSP2018-Restaurant-Train-BACKTRANS.csv'):\n",
+        "        df_train = pd.read_csv('1-VLSP2018-Restaurant-Train-BACKTRANS.csv')\n",
+        "        print(\"✅ Đã tải file BACKTRANS.\")\n",
+        "    else:\n",
+        "        df_train = pd.read_csv('1-VLSP2018-Restaurant-Train-BALANCED.csv')\n",
+        "        print(\"✅ Đã tải file BALANCED.\")\n",
+        "\n",
+        "    print(f\"   Tổng số dòng: {len(df_train)}\")\n",
+        "except:\n",
+        "    print(\"❌ LỖI: Không tìm thấy file csv cân bằng. Bạn kiểm tra lại Drive!\")\n",
+        "    df_train = pd.DataFrame(columns=['text', 'aspect', 'label']) # Fallback\n",
+        "\n",
+        "# Load Test\n",
+        "df_test = parse_vlsp_data('3-VLSP2018-SA-Restaurant-test.txt')\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"vinai/phobert-base\")\n",
+        "train_loader = DataLoader(SentimentDataset(df_train, tokenizer), batch_size=32, shuffle=True)\n",
+        "test_loader = DataLoader(SentimentDataset(df_test, tokenizer), batch_size=32)\n",
+        "\n",
+        "# --- BƯỚC 4: HUẤN LUYỆN (TRAINING) ---\n",
+        "print(\"\\n⏳ Đang huấn luyện lại mô hình để lưu...\")\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(\"vinai/phobert-base\", num_labels=3)\n",
+        "model.to(device)\n",
+        "\n",
+        "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
+        "total_steps = len(train_loader) * 3 # 3 Epochs\n",
+        "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
+        "\n",
+        "for epoch in range(3): # Chạy 3 Epochs\n",
+        "    model.train()\n",
+        "    print(f\"Epoch {epoch+1}/3... (Đang chạy, vui lòng đợi)\")\n",
+        "    for step, batch in enumerate(train_loader):\n",
+        "        batch = {k: v.to(device) for k, v in batch.items()}\n",
+        "        outputs = model(**batch)\n",
+        "        loss = outputs.loss\n",
+        "        loss.backward()\n",
+        "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+        "        optimizer.step()\n",
+        "        scheduler.step()\n",
+        "        optimizer.zero_grad()\n",
+        "    print(f\"   -> Xong Epoch {epoch+1}\")\n",
+        "\n",
+        "# --- BƯỚC 5: LƯU MODEL VÀO DRIVE ---\n",
+        "print(\"\\n💾 Đang lưu model vào Drive...\")\n",
+        "save_path = '/content/drive/My Drive/ABSA_Project/Model_Final'\n",
+        "\n",
+        "if not os.path.exists(save_path):\n",
+        "    os.makedirs(save_path)\n",
+        "\n",
+        "model.save_pretrained(save_path)\n",
+        "tokenizer.save_pretrained(save_path)\n",
+        "\n",
+        "print(f\"✅ ĐÃ LƯU THÀNH CÔNG TẠI: {save_path}\")\n",
+        "print(\"👉 Bây giờ bạn có thể sang Sổ tay Demo để chạy App rồi!\")"
+      ],
+      "metadata": {
+        "id": "2ii9s6xQheKE"
       },
       "execution_count": null,
       "outputs": []
