--- a/3_Final_Model_with_BackTranslation.ipynb
+++ b/3_Final_Model_with_BackTranslation.ipynb
@@ -64,13 +64,13 @@
         "folder_path = '/content/drive/My Drive/ABSA_Project'\n",
         "try:\n",
         "    os.chdir(folder_path)\n",
-        "    print(f\"✅ Đang làm việc tại: {os.getcwd()}\")\n",
+        "    print(f\"Đang làm việc tại: {os.getcwd()}\")\n",
         "except:\n",
-        "    print(\"⚠️ Kiểm tra lại đường dẫn folder_path!\")\n",
+        "    print(\"Kiểm tra lại đường dẫn folder_path!\")\n",
         "\n",
         "# Kiểm tra GPU\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(f\"🚀 Thiết bị: {device}\")\n",
+        "print(f\"Thiết bị: {device}\")\n",
         "\n",
         "# --- BƯỚC 2: HÀM ĐỌC DỮ LIỆU ---\n",
         "def parse_vlsp_data(file_name):\n",
@@ -109,18 +109,18 @@
         "# 1. Load tập Train đã Cân bằng (CSV)\n",
         "try:\n",
         "    df_train_balanced = pd.read_csv('1-VLSP2018-Restaurant-Train-BALANCED.csv')\n",
-        "    print(f\"✅ Đã tải tập TRAIN (Balanced): {len(df_train_balanced)} dòng\")\n",
+        "    print(f\"Đã tải tập TRAIN (Balanced): {len(df_train_balanced)} dòng\")\n",
         "    # Kiểm tra phân bố\n",
         "    print(\"   Phân bố:\", df_train_balanced['label'].value_counts().to_dict())\n",
         "except FileNotFoundError:\n",
-        "    print(\"❌ LỖI: Không tìm thấy file 'BALANCED.csv'. Bạn kiểm tra lại tên file trong Drive nhé!\")\n",
+        "    print(\"LỖI: Không tìm thấy file 'BALANCED.csv'. Bạn kiểm tra lại tên file trong Drive nhé!\")\n",
         "\n",
         "# 2. Load tập Test gốc (TXT)\n",
         "df_test = parse_vlsp_data('3-VLSP2018-SA-Restaurant-test.txt')\n",
-        "print(f\"✅ Đã tải tập TEST (Gốc): {len(df_test)} dòng\")\n",
+        "print(f\"Đã tải tập TEST (Gốc): {len(df_test)} dòng\")\n",
         "\n",
         "# --- BƯỚC 4: TOKENIZER & DATALOADER ---\n",
-        "print(\"\\n⏳ Đang thiết lập PhoBERT Tokenizer...\")\n",
+        "print(\"\\nĐang thiết lập PhoBERT Tokenizer...\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"vinai/phobert-base\")\n",
         "\n",
         "class SentimentDataset(Dataset):\n",
@@ -148,7 +148,7 @@
         "train_loader_balanced = DataLoader(SentimentDataset(df_train_balanced, tokenizer), batch_size=BATCH_SIZE, shuffle=True)\n",
         "test_loader = DataLoader(SentimentDataset(df_test, tokenizer), batch_size=BATCH_SIZE)\n",
         "\n",
-        "print(\"\\n🎉 SETUP XONG! Sẵn sàng huấn luyện.\")"
+        "print(\"\\nSETUP XONG! Sẵn sàng huấn luyện.\")"
       ],
       "metadata": {
         "id": "kRnGGcIfUJjg"
@@ -160,7 +160,7 @@
       "cell_type": "code",
       "source": [
         "# --- HUẤN LUYỆN TRÊN DỮ LIỆU CÂN BẰNG ---\n",
-        "print(\"⏳ Đang tải lại mô hình PhoBERT sạch (Reset)...\")\n",
+        "print(\"Đang tải lại mô hình PhoBERT sạch (Reset)...\")\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\"vinai/phobert-base\", num_labels=3)\n",
         "model.to(device)\n",
         "\n",
@@ -170,7 +170,7 @@
         "total_steps = len(train_loader_balanced) * EPOCHS\n",
         "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
         "\n",
-        "print(f\"\\n🚀 BẮT ĐẦU HUẤN LUYỆN VỚI DỮ LIỆU CÂN BẰNG (Balanced Training)...\")\n",
+        "print(f\"\\nBẮT ĐẦU HUẤN LUYỆN VỚI DỮ LIỆU CÂN BẰNG (Balanced Training)...\")\n",
         "start_time = time.time()\n",
         "\n",
         "for epoch in range(EPOCHS):\n",
@@ -199,7 +199,7 @@
         "            print(f\"  Epoch {epoch+1} | Batch {step}/{len(train_loader_balanced)} | Loss: {loss.item():.4f} | Time: {elapsed:.0f}s\")\n",
         "\n",
         "# --- ĐÁNH GIÁ KẾT QUẢ ---\n",
-        "print(\"\\n✅ Train xong! Đang chấm điểm lại trên tập Test...\")\n",
+        "print(\"\\nTrain xong! Đang chấm điểm lại trên tập Test...\")\n",
         "model.eval()\n",
         "predictions, true_labels = [], []\n",
         "\n",
@@ -216,7 +216,7 @@
         "        true_labels.extend(labels.cpu().numpy())\n",
         "\n",
         "# IN BÁO CÁO KẾT QUẢ\n",
-        "print(\"\\n📊 BẢNG KẾT QUẢ CHI TIẾT (SAU KHI CÂN BẰNG DỮ LIỆU):\")\n",
+        "print(\"\\nBẢNG KẾT QUẢ CHI TIẾT (SAU KHI CÂN BẰNG DỮ LIỆU):\")\n",
         "target_names = ['Negative', 'Neutral', 'Positive']\n",
         "print(classification_report(true_labels, predictions, target_names=target_names, digits=4, zero_division=0))"
       ],
@@ -286,7 +286,7 @@
         "\n",
         "# --- BƯỚC 3: QUY TRÌNH CÂN BẰNG DỮ LIỆU (Kết hợp Oversampling + Back-Translation) ---\n",
         "def balance_with_back_translation(df):\n",
-        "    print(\"🚀 Đang thực hiện Tăng cường dữ liệu bằng DỊCH NGƯỢC (Chất lượng cao)...\")\n",
+        "    print(\"Đang thực hiện Tăng cường dữ liệu bằng DỊCH NGƯỢC (Chất lượng cao)...\")\n",
         "\n",
         "    # Tách các lớp\n",
         "    df_pos = df[df['label'] == 'positive']\n",
@@ -352,7 +352,7 @@
         "\n",
         "# Lưu file xịn nhất\n",
         "df_train_bt.to_csv('1-VLSP2018-Restaurant-Train-BACKTRANS.csv', index=False)\n",
-        "print(\"💾 Đã lưu file chất lượng cao: 1-VLSP2018-Restaurant-Train-BACKTRANS.csv\")"
+        "print(\"Đã lưu file chất lượng cao: 1-VLSP2018-Restaurant-Train-BACKTRANS.csv\")"
       ],
       "metadata": {
         "id": "QBffK_NRrfEI"
@@ -372,14 +372,14 @@
         "from sklearn.metrics import classification_report\n",
         "\n",
         "# --- BƯỚC 1: LOAD DỮ LIỆU ĐÃ DỊCH NGƯỢC ---\n",
-        "print(\"⏳ Đang tải dữ liệu Back-Translation...\")\n",
+        "print(\"Đang tải dữ liệu Back-Translation...\")\n",
         "try:\n",
         "    # Đọc file bạn vừa tạo xong\n",
         "    df_train_final = pd.read_csv('1-VLSP2018-Restaurant-Train-BACKTRANS.csv')\n",
-        "    print(f\"✅ Đã tải tập TRAIN (Final): {len(df_train_final)} dòng\")\n",
+        "    print(f\"Đã tải tập TRAIN (Final): {len(df_train_final)} dòng\")\n",
         "    print(\"   Phân bố:\", df_train_final['label'].value_counts().to_dict())\n",
         "except FileNotFoundError:\n",
-        "    print(\"❌ LỖI: Không tìm thấy file csv. Hãy kiểm tra lại tên file.\")\n",
+        "    print(\"LỖI: Không tìm thấy file csv. Hãy kiểm tra lại tên file.\")\n",
         "\n",
         "# Load lại tập Test (nếu chưa có)\n",
         "if 'df_test' not in locals():\n",
@@ -395,7 +395,7 @@
         "test_loader = DataLoader(SentimentDataset(df_test, tokenizer), batch_size=32)\n",
         "\n",
         "# --- BƯỚC 3: KHỞI TẠO MÔ HÌNH (RESET) ---\n",
-        "print(\"\\n🧹 Reset mô hình để học lại từ đầu...\")\n",
+        "print(\"\\nReset mô hình để học lại từ đầu...\")\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\"vinai/phobert-base\", num_labels=3)\n",
         "model.to(device)\n",
@@ -406,7 +406,7 @@
         "total_steps = len(train_loader_final) * EPOCHS\n",
         "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
         "\n",
-        "print(f\"\\n🚀 BẮT ĐẦU HUẤN LUYỆN (PHƯƠNG PHÁP BACK-TRANSLATION)...\")\n",
+        "print(f\"\\nBẮT ĐẦU HUẤN LUYỆN (PHƯƠNG PHÁP BACK-TRANSLATION)...\")\n",
         "start_time = time.time()\n",
         "\n",
         "for epoch in range(EPOCHS):\n",
@@ -435,7 +435,7 @@
         "            print(f\"  Epoch {epoch+1} | Batch {step}/{len(train_loader_final)} | Loss: {loss.item():.4f} | Time: {elapsed:.0f}s\")\n",
         "\n",
         "# --- BƯỚC 5: ĐÁNH GIÁ KẾT QUẢ CUỐI CÙNG ---\n",
-        "print(\"\\n✅ Train xong! Đang chấm điểm lại trên tập Test...\")\n",
+        "print(\"\\nTrain xong! Đang chấm điểm lại trên tập Test...\")\n",
         "model.eval()\n",
         "predictions, true_labels = [], []\n",
         "\n",
@@ -452,7 +452,7 @@
         "        true_labels.extend(labels.cpu().numpy())\n",
         "\n",
         "# IN BÁO CÁO KẾT QUẢ\n",
-        "print(\"\\n📊 BẢNG KẾT QUẢ CHI TIẾT (FINAL - BACK TRANSLATION):\")\n",
+        "print(\"\\nBẢNG KẾT QUẢ CHI TIẾT (FINAL - BACK TRANSLATION):\")\n",
         "target_names = ['Negative', 'Neutral', 'Positive']\n",
         "print(classification_report(true_labels, predictions, target_names=target_names, digits=4, zero_division=0))"
       ],
@@ -538,12 +538,12 @@
         "\n",
         "try:\n",
         "    os.chdir(folder_path)\n",
-        "    print(f\"✅ Đang làm việc tại: {os.getcwd()}\")\n",
+        "    print(f\"Đang làm việc tại: {os.getcwd()}\")\n",
         "except:\n",
-        "    print(\"⚠️ Kiểm tra lại đường dẫn folder_path!\")\n",
+        "    print(\" Kiểm tra lại đường dẫn folder_path!\")\n",
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(f\"🚀 Thiết bị: {device}\")\n",
+        "print(f\"Thiết bị: {device}\")\n",
         "\n",
         "# --- BƯỚC 2: CÁC HÀM CẦN THIẾT (ĐÃ SỬA LỖI CÚ PHÁP) ---\n",
         "def parse_vlsp_data(file_name):\n",
@@ -598,21 +598,21 @@
         "            'labels': torch.tensor(self.label_map[row['label']], dtype=torch.long)\n",
         "        }\n",
         "\n",
-        "# --- BƯỚC 3: LOAD DỮ LIỆU & SETUP ---\n",
-        "print(\"\\n⏳ Đang tải dữ liệu...\")\n",
+        "# --- BƯỚC 3:LOAD DỮ LIỆU & SETUP ---\n",
+        "print(\"\\n Đang tải dữ liệu...\")\n",
         "# Load tập Train đã Cân bằng\n",
         "try:\n",
         "    # Ưu tiên dùng file Back-Translation nếu có\n",
         "    if os.path.exists('1-VLSP2018-Restaurant-Train-BACKTRANS.csv'):\n",
         "        df_train = pd.read_csv('1-VLSP2018-Restaurant-Train-BACKTRANS.csv')\n",
-        "        print(\"✅ Đã tải file BACKTRANS.\")\n",
+        "        print(\"Đã tải file BACKTRANS.\")\n",
         "    else:\n",
         "        df_train = pd.read_csv('1-VLSP2018-Restaurant-Train-BALANCED.csv')\n",
-        "        print(\"✅ Đã tải file BALANCED.\")\n",
+        "        print(\"Đã tải file BALANCED.\")\n",
         "\n",
         "    print(f\"   Tổng số dòng: {len(df_train)}\")\n",
         "except:\n",
-        "    print(\"❌ LỖI: Không tìm thấy file csv cân bằng. Bạn kiểm tra lại Drive!\")\n",
+        "    print(\" LỖI: Không tìm thấy file csv cân bằng. Bạn kiểm tra lại Drive!\")\n",
         "    df_train = pd.DataFrame(columns=['text', 'aspect', 'label']) # Fallback\n",
         "\n",
         "# Load Test\n",
@@ -623,7 +623,7 @@
         "test_loader = DataLoader(SentimentDataset(df_test, tokenizer), batch_size=32)\n",
         "\n",
         "# --- BƯỚC 4: HUẤN LUYỆN (TRAINING) ---\n",
-        "print(\"\\n⏳ Đang huấn luyện lại mô hình để lưu...\")\n",
+        "print(\"\\nĐang huấn luyện lại mô hình để lưu...\")\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\"vinai/phobert-base\", num_labels=3)\n",
         "model.to(device)\n",
         "\n",
@@ -646,7 +646,7 @@
         "    print(f\"   -> Xong Epoch {epoch+1}\")\n",
         "\n",
         "# --- BƯỚC 5: LƯU MODEL VÀO DRIVE ---\n",
-        "print(\"\\n💾 Đang lưu model vào Drive...\")\n",
+        "print(\"\\nĐang lưu model vào Drive...\")\n",
         "save_path = '/content/drive/My Drive/ABSA_Project/Model_Final'\n",
         "\n",
         "if not os.path.exists(save_path):\n",
@@ -655,8 +655,8 @@
         "model.save_pretrained(save_path)\n",
         "tokenizer.save_pretrained(save_path)\n",
         "\n",
-        "print(f\"✅ ĐÃ LƯU THÀNH CÔNG TẠI: {save_path}\")\n",
-        "print(\"👉 Bây giờ bạn có thể sang Sổ tay Demo để chạy App rồi!\")"
+        "print(f\" ĐÃ LƯU THÀNH CÔNG TẠI: {save_path}\")\n",
+        "print(\" Bây giờ bạn có thể sang Sổ tay Demo để chạy App rồi!\")"
       ],
       "metadata": {
         "id": "2ii9s6xQheKE"
