--- a/2_Baseline_Model_Training.ipynb
+++ b/2_Baseline_Model_Training.ipynb
@@ -55,10 +55,10 @@
         "\n",
         "# 2. Kiểm tra GPU\n",
         "if torch.cuda.is_available():\n",
-        "    print(f\"✅ ĐÃ BẬT GPU: {torch.cuda.get_device_name(0)}\")\n",
+        "    print(f\" ĐÃ BẬT GPU: {torch.cuda.get_device_name(0)}\")\n",
         "    device = torch.device('cuda')\n",
         "else:\n",
-        "    raise SystemError(\"❌ LỖI: Chưa bật GPU! Hãy vào Runtime -> Change runtime type -> T4 GPU\")\n",
+        "    raise SystemError(\" LỖI: Chưa bật GPU! Hãy vào Runtime -> Change runtime type -> T4 GPU\")\n",
         "\n",
         "# 3. Kết nối Google Drive\n",
         "drive.mount('/content/drive')\n",
@@ -68,9 +68,9 @@
         "\n",
         "try:\n",
         "    os.chdir(folder_path)\n",
-        "    print(f\"✅ Đang làm việc tại thư mục: {os.getcwd()}\")\n",
+        "    print(f\" Đang làm việc tại thư mục: {os.getcwd()}\")\n",
         "except:\n",
-        "    print(\"⚠️ Không tìm thấy thư mục! Hãy kiểm tra lại biến 'folder_path'.\")\n",
+        "    print(\" Không tìm thấy thư mục! Hãy kiểm tra lại biến 'folder_path'.\")\n",
         "\n",
         "# --- PHẦN 2: XỬ LÝ DỮ LIỆU (Parser) ---\n",
         "def parse_vlsp_data(file_name):\n",
@@ -115,10 +115,10 @@
         "print(\"⏳ Đang tải dữ liệu...\")\n",
         "df_train = parse_vlsp_data('1-VLSP2018-SA-Restaurant-train.txt')\n",
         "df_test = parse_vlsp_data('3-VLSP2018-SA-Restaurant-test.txt')\n",
-        "print(f\"✅ Train set: {len(df_train)} dòng | Test set: {len(df_test)} dòng\")\n",
+        "print(f\" Train set: {len(df_train)} dòng | Test set: {len(df_test)} dòng\")\n",
         "\n",
         "# --- PHẦN 3: CHUẨN BỊ DATASET CHO PHOBERT ---\n",
-        "print(\"⏳ Đang tải Tokenizer PhoBERT...\")\n",
+        "print(\"Đang tải Tokenizer PhoBERT...\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"vinai/phobert-base\")\n",
         "\n",
         "class SentimentDataset(Dataset):\n",
@@ -158,7 +158,7 @@
         "test_loader = DataLoader(SentimentDataset(df_test, tokenizer), batch_size=BATCH_SIZE)\n",
         "\n",
         "# --- PHẦN 4: HUẤN LUYỆN (TRAINING) ---\n",
-        "print(\"⏳ Đang tải mô hình PhoBERT (Pre-trained)...\")\n",
+        "print(\" Đang tải mô hình PhoBERT (Pre-trained)...\")\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\"vinai/phobert-base\", num_labels=3)\n",
         "model.to(device)\n",
         "\n",
@@ -168,7 +168,7 @@
         "total_steps = len(train_loader) * EPOCHS\n",
         "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
         "\n",
-        "print(f\"\\n🚀 BẮT ĐẦU HUẤN LUYỆN TRÊN GPU {torch.cuda.get_device_name(0)}...\")\n",
+        "print(f\"\\n BẮT ĐẦU HUẤN LUYỆN TRÊN GPU {torch.cuda.get_device_name(0)}...\")\n",
         "start_time = time.time()\n",
         "\n",
         "for epoch in range(EPOCHS):\n",
@@ -197,7 +197,7 @@
         "            print(f\"  Epoch {epoch+1} | Batch {step}/{len(train_loader)} | Loss: {loss.item():.4f} | Time: {elapsed:.0f}s\")\n",
         "\n",
         "# --- PHẦN 5: ĐÁNH GIÁ (EVALUATION) ---\n",
-        "print(\"\\n✅ Đã train xong! Đang chấm điểm trên tập Test...\")\n",
+        "print(\"\\nĐã train xong! Đang chấm điểm trên tập Test...\")\n",
         "model.eval()\n",
         "predictions, true_labels = [], []\n",
         "\n",
@@ -214,7 +214,7 @@
         "        true_labels.extend(labels.cpu().numpy())\n",
         "\n",
         "# IN BÁO CÁO CUỐI CÙNG\n",
-        "print(\"\\n📊 BẢNG KẾT QUẢ CHI TIẾT (BASELINE - CHƯA CÂN BẰNG):\")\n",
+        "print(\"\\n BẢNG KẾT QUẢ CHI TIẾT (BASELINE - CHƯA CÂN BẰNG):\")\n",
         "target_names = ['Negative', 'Neutral', 'Positive']\n",
         "print(classification_report(true_labels, predictions, target_names=target_names, digits=4, zero_division=0))"
       ]
