--- a/1_Data_Analysis_and_EDA_Experiment.ipynb
+++ b/1_Data_Analysis_and_EDA_Experiment.ipynb
@@ -607,18 +607,18 @@
         "\n",
         "    # 1. Load tập Dev\n",
         "    df_dev = parse_vlsp_data(file_dev_name)\n",
-        "    print(f\"✅ Đã tải tập Dev: {len(df_dev)} mẫu\")\n",
+        "    print(f\" Đã tải tập Dev: {len(df_dev)} mẫu\")\n",
         "\n",
         "    # 2. Load tập Test\n",
         "    df_test = parse_vlsp_data(file_test_name)\n",
-        "    print(f\"✅ Đã tải tập Test: {len(df_test)} mẫu\")\n",
+        "    print(f\" Đã tải tập Test: {len(df_test)} mẫu\")\n",
         "\n",
         "    # 3. Kiểm tra phân bố tập Test (Để xem nó có mất cân bằng giống tập Train không)\n",
         "    print(\"\\nPhân bố nhãn trên tập Test (Dữ liệu thực tế để chấm điểm):\")\n",
         "    print(df_test['label'].value_counts())\n",
         "\n",
         "except Exception as e:\n",
-        "    print(\"❌ Lỗi:\", e)\n",
+        "    print(\" Lỗi:\", e)\n",
         "    print(\"Bạn nhớ kiểm tra lại tên file nhé!\")"
       ],
       "metadata": {
@@ -635,8 +635,8 @@
           "name": "stdout",
           "text": [
             "--- ĐANG TẢI TẬP DEV & TEST ---\n",
-            "✅ Đã tải tập Dev: 3443 mẫu\n",
-            "✅ Đã tải tập Test: 2419 mẫu\n",
+            " Đã tải tập Dev: 3443 mẫu\n",
+            " Đã tải tập Test: 2419 mẫu\n",
             "\n",
             "Phân bố nhãn trên tập Test (Dữ liệu thực tế để chấm điểm):\n",
             "label\n",
