Fix comment formatting and remove emoji in notebook

--- a/4_Demo_App.ipynb
+++ b/4_Demo_App.ipynb
@@ -105,7 +105,7 @@
         "# Chạy ngầm server\n",
         "!nohup streamlit run app.py &\n",
         "\n",
-        "# ⚠️ HƯỚNG DẪN:\n",
+        "# HƯỚNG DẪN:\n",
         "# 1. Đăng ký tài khoản miễn phí tại: https://dashboard.ngrok.com/get-started/your-authtoken\n",
         "# 2. Copy token của bạn và thay thế vào dòng bên dưới:\n",
         "\n",
@@ -113,7 +113,7 @@
         "ngrok.set_auth_token(\"DÁN_MÃ_TOKEN_NGROK_CỦA_BẠN_VÀO_ĐÂY\")\n",
         "\n",
         "url = ngrok.connect(8501).public_url\n",
-        "print(f\"🚀 LINK DEMO: {url}\")"
+        "print(f\" LINK DEMO: {url}\")"
       ],
       "metadata": {
         "id": "3X6gOi5Et-hn"
