Được tạo bằng Colab

--- a/4_Demo_App.ipynb
+++ b/4_Demo_App.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiOtGGbyRHcjroUD63/U6R",
+      "authorship_tag": "ABX9TyP2vwTGvyc1Vup6YPIc6Bsa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "    return tokenizer, model\n",
         "\n",
         "try:\n",
-        "    with st.spinner('Đang khởi động AI... (Mất khoảng 30s)'):\n",
+        "    with st.spinner('Đang khởi động ... (Mất khoảng 30s)'):\n",
         "        tokenizer, model = load_model()\n",
         "    st.success(\"Hệ thống sẵn sàng!\", icon=\"✅\")\n",
         "except Exception as e:\n",
@@ -102,6 +102,25 @@
     {
       "cell_type": "code",
       "source": [
+        "# 1. Cài đặt các thư viện cần thiết\n",
+        "!pip install -q streamlit pyngrok transformers torch\n",
+        "\n",
+        "# 2. Import thư viện ngrok (Để sửa lỗi NameError)\n",
+        "from pyngrok import ngrok\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# 3. Kết nối Drive (Nếu chưa kết nối)\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "wWcTN8RfCivK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Chạy ngầm server\n",
         "!nohup streamlit run app.py &\n",
         "\n",
@@ -110,7 +129,7 @@
         "# 2. Copy token của bạn và thay thế vào dòng bên dưới:\n",
         "\n",
         "# Thay dòng chứa token thật bằng dòng này:\n",
-        "ngrok.set_auth_token(\"DÁN_MÃ_TOKEN_NGROK_CỦA_BẠN_VÀO_ĐÂY\")\n",
+        "ngrok.set_auth_token(\"---------\")\n",
         "\n",
         "url = ngrok.connect(8501).public_url\n",
         "print(f\" LINK DEMO: {url}\")"
